--- a/lesson_07/index.html
+++ b/lesson_07/index.html
@@ -5,10 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="task01.js"></script>
+    <!-- <script defer src="task01.js"></script>
     <script defer src="task02.js"></script>
-    <script defer src="task03.js"></script>
+    <script defer src="task03.js"></script> -->
     <script defer src="task04.js"></script>
   </head>
-  <body></body>
+  <body>
+    <table>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </body>
 </html>
