--- a/lesson_09/index.html
+++ b/lesson_09/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <!--  <script defer src="task01.js"></script>
-    <script defer src="task02.js"></script> -->
-    <script defer src="task03.js"></script>
-    <!--  <script defer src="game01.js"></script>
-    <script defer src="game02.js"></script> -->
+    <script defer src="cart.js"></script>
+    
   </head>
   <body></body>
 </html>
